--- a/gb/19/5/20/n11269286.md
+++ b/gb/19/5/20/n11269286.md
@@ -1,76 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/mprjd2205/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/mprjd2205/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ËÄ´¨ÔÙÏÖ·ÇÖÞÖíÎÁ ÉúÖíËÀÍö78Í·</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2018/12/1812272136592378.jpg" />
-<h6>È¥Äê8ÔÂ³õÖÁ½ñÄê4ÔÂ£¬·ÇÖÞÖíÎÁÒßÇé´«±éÖÐ¹ú´óÂ½µÄ31¸öÊ¡¼¶ÐÐÕþÇø¡£(Scott Olson/Getty Images)
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kdngvg317/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kdngvg317/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/kdngvg317/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/kdngvg317/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>å››å·å†çŽ°éžæ´²çŒªç˜Ÿ ç”ŸçŒªæ­»äº¡78å¤´</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2018/12/1812272136592378.jpg" />
+<h6>è‡ªåŽ»å¹´åº•ï¼Œéžæ´²çŒªç˜Ÿåœ¨å¤§é™†å„åœ°æ‚„æ‚„è”“å»¶ï¼Œä¸­å…±å½“å±€éšçž’ç–«æƒ…ï¼Œæœªé‡‡å–æœ‰æ•ˆé˜²æŽ§ï¼Œé€ æˆè‡³ä»Šå·²æœ‰9ä¸ªçœå¸‚é™†ç»­æ›å‡ºç–«æƒ…ã€‚(Scott Olson/Getty Images)
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê05ÔÂ21ÈÕÑ¶¡¿<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2%E7%8C%AA%E7%98%9F.md">·ÇÖÞÖíÎÁ</a>ÒßÇéÔÚÖÐ¹ú´óÂ½³ÖÐøÂûÑÓ¡£<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E5%9B%9B%E5%B7%9D.md">ËÄ´¨</a>Ê¡¼Ì3ÔÂ¹ã°²ÊÐÁÚË®ÏØºó£¬ÈÕÇ°°¢°ÓÖÝÈô¶û¸ÇÏØÓÖ³öÏÖÒßÇé£¬ÉúÖíËÀÍö78Í·¡£</p>
-<p>ÖÐ¹²Å©ÒµÅ©´å²¿ÐÂÎÅ°ì¹«ÊÒ5ÔÂ20ÈÕÔÚ¹ÙÍø·¢²¼¹«¸æ³Æ£¬È·ÈÏ°¢°ÓÖÝÈô¶û¸ÇÏØ½µÔúÏç·¢Éú<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2%E7%8C%AA%E7%98%9F.md">·ÇÖÞÖíÎÁ</a>ÒßÇé¡£½ØÖÁÄ¿Ç°£¬½µÔúÏçÒßÇø¹²´æÀ¸ÉúÖí429Í·£¬·¢²¡111Í·£¬ËÀÍö78Í·¡£</p>
-<p>´óÂ½µÄÖ÷ÒªÉúÖí´óÊ¡<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E5%9B%9B%E5%B7%9D.md">ËÄ´¨</a>È¥Äê11ÔÂÖÐÑ®ÒË±öÊÐ¸ßÏØÊ×´Î±¬³ö·ÇÖÞÖíÎÁÒßÇéÒÔÀ´£¬ÏÈºóÔÚ³É¶¼<br />
-¡¢ãòÖÝ¡¢°ÍÖÐ¡¢ÃàÑô¡¢¹ã°²¡¢°¢°ÓÖÝµÈ6µØ³öÏÖÒßÇé¡£ÆäÖÐ½ñÄê3ÔÂ12ÈÕ£¬¹ã°²ÊÐÁÚË®ÏØ°üÃ¯£¨ÓåÁÚ¶Î£©¸ßËÙÁÚË®ÄÏÊÕ·ÑÕ¾²é»ñÒ»Á¾²ÖÅîÊ½ÉúÖí»õÔË³µ£¬¸Ã»õÔË³µÔËÔØÉúÖí150Í·£¬ËÀÍö9Í·£¬¾­È·ÈÏÎª·ÇÖÞÖíÎÁ²¡¶¾ºËËáÑôÐÔ¡£</p>
-<p>ÖÐ¹²Å©ÒµÅ©´å²¿ÐÂÎÅ°ì¹«ÊÒ4ÔÂ23ÈÕÔøÏòÃ½Ìå¹«²¼³Æ£¬Ä¿Ç°´óÂ½·ÇÖÞÖíÎÁ·¢ÉúÊÆÍ·Ç÷»ºµÈ¡£²»¹ý£¬¸ÃËµ·¨ÊÜÍâ½çÆÕ±éÖÊÒÉ¡£</p>
-<p>¡¶Å¦Ô¼Ê±±¨¡·ÖÐÎÄÍø±¨µ¼Ëµ£¬´óÂ½·ÇÖÞÖíÎÁµÄÊµ¼ÊÒßÇé£¬¿ÉÄÜ±È¹Ù·½¹«²¼µÄ¸üÑÏÖØ¡£Åí²©ÉçµÄÆÀÂÛÎÄÕÂÒ²Ëµ£¬³öÓÚ¶Ô¹ÙÎ»ºÍÕþÖÎÓ°ÏìµÄµ£ÐÄ£¬ÖÐ¹²¹ÙÔ±ÃÇ·âËøÃ½Ìå¹ØÓÚ·ÇÖÞÖíÎÁµÄ±¨µ¼£¬ÒþÂ÷ÉúÖí¸ÐÈ¾ºÍËÀÍöµÄÊý¾ÝµÈ£¬ÕâÁîÈËÁªÏëµ½ÖÐ¹²Õþ¸®¹ýÈ¥´¦Àí·ÇµäÒßÇéµÄ·½Ê½¡£</p>
-<p>¾Ý¸Û¡¢Ì¨Á½µØ¶à¼ÒÃ½Ìå±¨µ¼£¬5ÔÂ16ÈÕÖÁ17ÈÕ£¬ÔÚºþ±±Îäºº¾ÙÐÐµÄµÚÁù½ìÈ«ÇòÖíÒµÂÛÌ³ôßµÚ16½ìÖÐ¹úÖíÒµ·¢Õ¹´ó»áÉÏ£¬ÖÐ¹úÐóÄÁÒµÐ­»á»á³¤ÀîÏ£ÈÙ·¢±íÌ¸»°Ëµ£¬ÖÐ¹ú´óÂ½µÄ·ÇÖÞÖíÎÁÒßÇéÒÑ³ÉÎªÑÏÖØºÍÔÖÄÑÐÔµÄÎÊÌâ£¬ÏÖÔÚÈ«¹ú¶¼´¦ÓÚÎ£»úÖ®ÖÐ£¬ÒÑ³É¹ú¼ÒÎ£»ú£¬¶Ô¾­¼ÃµÄÓ°Ïì½«·Ç³£¾ªÈË¡£</p>
-<p>´ÓÈ¥Äê8ÔÂÁÉÄþÊ¡·¢ÏÖ·ÇÖÞÖíÎÁÊ×Àý£¬ÖÁ½ñÄê4ÔÂº£ÄÏÊ¡±¬·¢ÒßÇé£¬ÒßÇéÔÚÖÐ¹ú´óÂ½È«ÃæÂûÑÓÓÃÁË²»µ½9¸öÔÂµÄÊ±¼ä¡£</p>
-<p>Ê±ÕþÆÀÂÛÔ±³ÂË¼ÃôÈÏÎª£¬Ê§¿ØµÄ±³ºóÊÇ¹Ù·½ÐÅÏ¢¿ØÖÆ¡¢²»Í¸Ã÷¼ÓÉÏÕþ²ß´íÎó¡£ÈçµÚÒ»Ê±¼äÖªÇé²»±¨£¬ÂûÑÓ¿ªÀ´Ê±£¬»¹Ëµ²»ÍþÐ²ÈËÀà½¡¿µ¡¢²¡¶¾²»´«È¾ÈË£¬ÖÂ²»Ð¤ÒµÕßÍÚ²¡ËÀÖí×öÈâ¸É£¬ÈÃ²¡¶¾»Øµ½Ê³ÎïÁ´£¬ÓÖÎª±£ÖíÈâ¹©Ó¦£¬¼±¼±Ã¦Ã¦·Å¿íÒßÇøÖíÖ»Á÷Í¨µÈ¡£</p>
-<p>ÔðÈÎ±à¼­£ºÀî½ð±¾</p>
-
+	<p>ã€å¤§çºªå…ƒ2019å¹´05æœˆ21æ—¥è®¯ã€‘<ahref="https://github.com/kdngvg317/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2%E7%8C%AA%E7%98%9F.md#1">éžæ´²çŒªç˜Ÿ</a>ç–«æƒ…åœ¨ä¸­å›½å¤§é™†æŒç»­è”“å»¶ã€‚<ahref="https://github.com/kdngvg317/djy/blob/master/gb/tag/%E5%9B%9B%E5%B7%9D.md#1">å››å·</a>çœç»§3æœˆå¹¿å®‰å¸‚é‚»æ°´åŽ¿åŽï¼Œæ—¥å‰é˜¿åå·žè‹¥å°”ç›–åŽ¿åˆå‡ºçŽ°ç–«æƒ…ï¼Œç”ŸçŒªæ­»äº¡78å¤´ã€‚</p>
+<p>ä¸­å…±å†œä¸šå†œæ‘éƒ¨æ–°é—»åŠžå…¬å®¤5æœˆ20æ—¥åœ¨å®˜ç½‘å‘å¸ƒå…¬å‘Šç§°ï¼Œç¡®è®¤é˜¿åå·žè‹¥å°”ç›–åŽ¿é™æ‰Žä¹¡å‘ç”Ÿ<ahref="https://github.com/kdngvg317/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2%E7%8C%AA%E7%98%9F.md#1">éžæ´²çŒªç˜Ÿ</a>ç–«æƒ…ã€‚æˆªè‡³ç›®å‰ï¼Œé™æ‰Žä¹¡ç–«åŒºå…±å­˜æ ç”ŸçŒª429å¤´ï¼Œå‘ç—…111å¤´ï¼Œæ­»äº¡78å¤´ã€‚</p>
+<p>å¤§é™†çš„ä¸»è¦ç”ŸçŒªå¤§çœ<ahref="https://github.com/kdngvg317/djy/blob/master/gb/tag/%E5%9B%9B%E5%B7%9D.md#1">å››å·</a>åŽ»å¹´11æœˆä¸­æ—¬å®œå®¾å¸‚é«˜åŽ¿é¦–æ¬¡çˆ†å‡ºéžæ´²çŒªç˜Ÿç–«æƒ…ä»¥æ¥ï¼Œå…ˆåŽåœ¨æˆéƒ½<br />
+ã€æ³¸å·žã€å·´ä¸­ã€ç»µé˜³ã€å¹¿å®‰ã€é˜¿åå·žç­‰6åœ°å‡ºçŽ°ç–«æƒ…ã€‚å…¶ä¸­ä»Šå¹´3æœˆ12æ—¥ï¼Œå¹¿å®‰å¸‚é‚»æ°´åŽ¿åŒ…èŒ‚ï¼ˆæ¸é‚»æ®µï¼‰é«˜é€Ÿé‚»æ°´å—æ”¶è´¹ç«™æŸ¥èŽ·ä¸€è¾†ä»“è“¬å¼ç”ŸçŒªè´§è¿è½¦ï¼Œè¯¥è´§è¿è½¦è¿è½½ç”ŸçŒª150å¤´ï¼Œæ­»äº¡9å¤´ï¼Œç»ç¡®è®¤ä¸ºéžæ´²çŒªç˜Ÿç—…æ¯’æ ¸é…¸é˜³æ€§ã€‚</p>
+<p>ä¸­å…±å†œä¸šå†œæ‘éƒ¨æ–°é—»åŠžå…¬å®¤4æœˆ23æ—¥æ›¾å‘åª’ä½“å…¬å¸ƒç§°ï¼Œç›®å‰å¤§é™†éžæ´²çŒªç˜Ÿå‘ç”ŸåŠ¿å¤´è¶‹ç¼“ç­‰ã€‚ä¸è¿‡ï¼Œè¯¥è¯´æ³•å—å¤–ç•Œæ™®éè´¨ç–‘ã€‚</p>
+<p>ã€Šçº½çº¦æ—¶æŠ¥ã€‹ä¸­æ–‡ç½‘æŠ¥å¯¼è¯´ï¼Œå¤§é™†éžæ´²çŒªç˜Ÿçš„å®žé™…ç–«æƒ…ï¼Œå¯èƒ½æ¯”å®˜æ–¹å…¬å¸ƒçš„æ›´ä¸¥é‡ã€‚å½­åšç¤¾çš„è¯„è®ºæ–‡ç« ä¹Ÿè¯´ï¼Œå‡ºäºŽå¯¹å®˜ä½å’Œæ”¿æ²»å½±å“çš„æ‹…å¿ƒï¼Œä¸­å…±å®˜å‘˜ä»¬å°é”åª’ä½“å…³äºŽéžæ´²çŒªç˜Ÿçš„æŠ¥å¯¼ï¼Œéšçž’ç”ŸçŒªæ„ŸæŸ“å’Œæ­»äº¡çš„æ•°æ®ç­‰ï¼Œè¿™ä»¤äººè”æƒ³åˆ°ä¸­å…±æ”¿åºœè¿‡åŽ»å¤„ç†éžå…¸ç–«æƒ…çš„æ–¹å¼ã€‚</p>
+<p>æ®æ¸¯ã€å°ä¸¤åœ°å¤šå®¶åª’ä½“æŠ¥å¯¼ï¼Œ5æœˆ16æ—¥è‡³17æ—¥ï¼Œåœ¨æ¹–åŒ—æ­¦æ±‰ä¸¾è¡Œçš„ç¬¬å…­å±Šå…¨çƒçŒªä¸šè®ºå›æš¨ç¬¬16å±Šä¸­å›½çŒªä¸šå‘å±•å¤§ä¼šä¸Šï¼Œä¸­å›½ç•œç‰§ä¸šåä¼šä¼šé•¿æŽå¸Œè£å‘è¡¨è°ˆè¯è¯´ï¼Œä¸­å›½å¤§é™†çš„éžæ´²çŒªç˜Ÿç–«æƒ…å·²æˆä¸ºä¸¥é‡å’Œç¾éš¾æ€§çš„é—®é¢˜ï¼ŒçŽ°åœ¨å…¨å›½éƒ½å¤„äºŽå±æœºä¹‹ä¸­ï¼Œå·²æˆå›½å®¶å±æœºï¼Œå¯¹ç»æµŽçš„å½±å“å°†éžå¸¸æƒŠäººã€‚</p>
+<p>ä»ŽåŽ»å¹´8æœˆè¾½å®çœå‘çŽ°éžæ´²çŒªç˜Ÿé¦–ä¾‹ï¼Œè‡³ä»Šå¹´4æœˆæµ·å—çœçˆ†å‘ç–«æƒ…ï¼Œç–«æƒ…åœ¨ä¸­å›½å¤§é™†å…¨é¢è”“å»¶ç”¨äº†ä¸åˆ°9ä¸ªæœˆçš„æ—¶é—´ã€‚</p>
+<p>æ—¶æ”¿è¯„è®ºå‘˜é™ˆæ€æ•è®¤ä¸ºï¼Œå¤±æŽ§çš„èƒŒåŽæ˜¯å®˜æ–¹ä¿¡æ¯æŽ§åˆ¶ã€ä¸é€æ˜ŽåŠ ä¸Šæ”¿ç­–é”™è¯¯ã€‚å¦‚ç¬¬ä¸€æ—¶é—´çŸ¥æƒ…ä¸æŠ¥ï¼Œè”“å»¶å¼€æ¥æ—¶ï¼Œè¿˜è¯´ä¸å¨èƒäººç±»å¥åº·ã€ç—…æ¯’ä¸ä¼ æŸ“äººï¼Œè‡´ä¸è‚–ä¸šè€…æŒ–ç—…æ­»çŒªåšè‚‰å¹²ï¼Œè®©ç—…æ¯’å›žåˆ°é£Ÿç‰©é“¾ï¼Œåˆä¸ºä¿çŒªè‚‰ä¾›åº”ï¼Œæ€¥æ€¥å¿™å¿™æ”¾å®½ç–«åŒºçŒªåªæµé€šç­‰ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæŽé‡‘æœ¬</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/5/20/n11269286.htm">ËÄ´¨ÔÙÏÖ·ÇÖÞÖíÎÁ ÉúÖíËÀÍö78Í·</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/4/29/n11221175.htm">·ÇÖÞÖíÎÁÑ¸ËÙÂûÑÓ ¹ãÎ÷²©°×Âú½ÖËÀÖí</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/24/n11210649.htm">ÖÐ¹²ÑÚ¸Ç·ÇÖÞÖíÎÁÒßÇé ÈøË¹²¡³¡¾°»òÔÙÏÖ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/23/n11208380.htm">¼ÓÄÃ´óÖíÈâ³ö¿ÚÖÐ¹ú´óÔö ¹úÄÚ¼Û¸ñ½«ÉÏÕÇ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/23/n11207983.htm">ÖÐ¹²ÎÞÁ¦¿ØÖÆÖíÎÁ ÒßÇéÑÏÖØ³å»÷ÑøÖíÒµ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/21/n11203358.htm">·ÇÖÞÖíÎÁ¼ÌÐøËÁÅ° º£ÄÏ4µØÇøÔÙ±¬ÒßÇé</a></li>
-> <li><a href="https://github.com/mprjd2205/djy/blob/master/gb/19/5/18/n11265632.md">³ÂË¼Ãô£º·ÇÖÞÖíÎÁ³É¹ú¼ÒÎ£»ú ÖÐ¹²¾ö²ßÖ®»ö</a></li>
-> <li><a href="https://github.com/mprjd2205/djy/blob/master/gb/19/5/15/n11261272.md">ÖÐ¹ú2ÒÚÍ·ÖíËÀÓÚ·ÇÖÞÖíÎÁ ½üÃÀÅ·ÖíÖ»×ÜºÍ</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11638837.htm">ÀëÆæËÀÍöµÄÖØÇìÊé¼ÇÈÎÑ§·æ ±»Ö¸Éæ¶àÆðÔ©°¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639300.htm">¼ÌÍõË¼´Ïºó ÅËÊ¯ÒÙ¶ù×ÓÅËÈðÇå¿ÕÎ¢²©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639897.htm">¡¾ÐÂÎÅ¿´µã¡¿ÃÀÖØÉêÍ£»ðµ×Ïß ±±¾©´ó¶¯×÷Ê¾ºÃ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11640298.htm">ÖÐÐ¡ÒøÐÐ¼·¶Ò³±ÆµÏÖ ÖÐ¹²½ðÈÚÎ¯¼±ÉÌ¶Ô²ß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/11/n11582046.htm">ÌÆ´úÊ¹ÕßÆ¯Á÷µ½¾ÞÈË¹ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625562.htm">¡¾²Å×Ó¼ÑÈË¡¿½èººÈËÉí·Ý¼ÞÇ¬Â¡ÔøËïµÄÂúÇå²ÅÅ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/4/21/n4416242.htm">Ôã¿·Ö®ÆÞ²»ÏÂÌÃ ¹ÅÈËÊÓ»éÒöÎªÈËÂ×Ö®±¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612042.htm">¡¾²Å×Ó¼ÑÈË¡¿Áº×£µÄ¹ÊÊÂ ÎÒÃÇ¶Á¶®ÁËÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636669.htm">Íõ½¡ÁÖ¶À×ÓÍõË¼´ÏÁÐÈë±»Ö´ÐÐÈËÃûµ¥ µÇÉÏÈÈËÑ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636278.htm">¡¾·­Ç½±Ø¿´¡¿·ÖÎö£ºËÄÖÐÈ«»á¹«±¨»òÐ¹´óÃØÃÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638219.htm">ÁÖÖ£±»Ï°º«°ÚÉÏÌ¨ Ïã¸Û²½ÈëºÚ°µÊ±ÆÚ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639897.htm">¡¾ÐÂÎÅ¿´µã¡¿ÃÀÖØÉêÍ£»ðµ×Ïß ±±¾©´ó¶¯×÷Ê¾ºÃ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11640231.htm">¡¾ÐÂÎÅ¿´µã¡¿ËÄÖÐÇ¿»¯µ³¹ú Ðé»¯ÈËÃñ ¸Ä¸ïÒÑËÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639377.htm">ÈÏÇåÖÐ¹²²Ð±© ¸ÛÈË¶Ô·¨ÂÖ¹¦µÄÈÏÊ¶Óú¼ÓÕýÃæ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638183.htm">¶ÅãëÔóÉàÕ½³Â°ÙÏéºóºôÓõ£º¼¯ÖÐ¾«Éñ×ö¶ÔµÄÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635898.htm">ÕÂ×ÓâùÊÔ¾µÈÕ±¾ÒÕ¼¿ ÔøÒò½öËµËÄ¸ö×Ö²ÒÔâÌÔÌ­</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639534.htm">ÁÖÖ¾Áá17ÈÕ»éÑç ÁÖÒÀ³¿ÊÕÏ²ÌûÒÅº¶ÎÞ·¨¸°Ñç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635562.htm">É¹Í··¢ÕÚÑÛ¼Ó¿ÚÕÖÉú»îÕÕ ÈÝ×æ¶ùÒÉÔâ´óÂ½·âÉ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635746.htm">ÑöÍû45¶È³ª×ËÔµºÎÁ·³É ·ÑÓñÇå½Ò¸èÊÖÉúÑÄÃØÐÁ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11638837.htm">ÀëÆæËÀÍöµÄÖØÇìÊé¼ÇÈÎÑ§·æ ±»Ö¸Éæ¶àÆðÔ©°¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639300.htm">¼ÌÍõË¼´Ïºó ÅËÊ¯ÒÙ¶ù×ÓÅËÈðÇå¿ÕÎ¢²©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639897.htm">¡¾ÐÂÎÅ¿´µã¡¿ÃÀÖØÉêÍ£»ðµ×Ïß ±±¾©´ó¶¯×÷Ê¾ºÃ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11640298.htm">ÖÐÐ¡ÒøÐÐ¼·¶Ò³±ÆµÏÖ ÖÐ¹²½ðÈÚÎ¯¼±ÉÌ¶Ô²ß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/11/n11582046.htm">ÌÆ´úÊ¹ÕßÆ¯Á÷µ½¾ÞÈË¹ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625562.htm">¡¾²Å×Ó¼ÑÈË¡¿½èººÈËÉí·Ý¼ÞÇ¬Â¡ÔøËïµÄÂúÇå²ÅÅ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/4/21/n4416242.htm">Ôã¿·Ö®ÆÞ²»ÏÂÌÃ ¹ÅÈËÊÓ»éÒöÎªÈËÂ×Ö®±¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612042.htm">¡¾²Å×Ó¼ÑÈË¡¿Áº×£µÄ¹ÊÊÂ ÎÒÃÇ¶Á¶®ÁËÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636669.htm">Íõ½¡ÁÖ¶À×ÓÍõË¼´ÏÁÐÈë±»Ö´ÐÐÈËÃûµ¥ µÇÉÏÈÈËÑ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636278.htm">¡¾·­Ç½±Ø¿´¡¿·ÖÎö£ºËÄÖÐÈ«»á¹«±¨»òÐ¹´óÃØÃÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638219.htm">ÁÖÖ£±»Ï°º«°ÚÉÏÌ¨ Ïã¸Û²½ÈëºÚ°µÊ±ÆÚ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639897.htm">¡¾ÐÂÎÅ¿´µã¡¿ÃÀÖØÉêÍ£»ðµ×Ïß ±±¾©´ó¶¯×÷Ê¾ºÃ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11640231.htm">¡¾ÐÂÎÅ¿´µã¡¿ËÄÖÐÇ¿»¯µ³¹ú Ðé»¯ÈËÃñ ¸Ä¸ïÒÑËÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639377.htm">ÈÏÇåÖÐ¹²²Ð±© ¸ÛÈË¶Ô·¨ÂÖ¹¦µÄÈÏÊ¶Óú¼ÓÕýÃæ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638183.htm">¶ÅãëÔóÉàÕ½³Â°ÙÏéºóºôÓõ£º¼¯ÖÐ¾«Éñ×ö¶ÔµÄÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635898.htm">ÕÂ×ÓâùÊÔ¾µÈÕ±¾ÒÕ¼¿ ÔøÒò½öËµËÄ¸ö×Ö²ÒÔâÌÔÌ­</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639534.htm">ÁÖÖ¾Áá17ÈÕ»éÑç ÁÖÒÀ³¿ÊÕÏ²ÌûÒÅº¶ÎÞ·¨¸°Ñç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635562.htm">É¹Í··¢ÕÚÑÛ¼Ó¿ÚÕÖÉú»îÕÕ ÈÝ×æ¶ùÒÉÔâ´óÂ½·âÉ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635746.htm">ÑöÍû45¶È³ª×ËÔµºÎÁ·³É ·ÑÓñÇå½Ò¸èÊÖÉúÑÄÃØÐÁ</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/kdngvg317/djy/blob/master/gb/19/4/21/n11203358.md#1">éžæ´²çŒªç˜Ÿç»§ç»­è‚†è™ æµ·å—4åœ°åŒºå†çˆ†ç–«æƒ…</a></li>
+<li><a href="https://github.com/kdngvg317/djy/blob/master/gb/19/4/23/n11207983.md#1">ä¸­å…±æ— åŠ›æŽ§åˆ¶çŒªç˜Ÿ ç–«æƒ…ä¸¥é‡å†²å‡»å…»çŒªä¸š</a></li>
+<li><a href="https://github.com/kdngvg317/djy/blob/master/gb/19/4/23/n11208380.md#1">åŠ æ‹¿å¤§çŒªè‚‰å‡ºå£ä¸­å›½å¤§å¢ž å›½å†…ä»·æ ¼å°†ä¸Šæ¶¨</a></li>
+<li><a href="https://github.com/kdngvg317/djy/blob/master/gb/19/4/24/n11210649.md#1">ä¸­å…±æŽ©ç›–éžæ´²çŒªç˜Ÿç–«æƒ… è¨æ–¯ç—…åœºæ™¯æˆ–å†çŽ°</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mprjd2205/djy/blob/master/gb/19/5/20/n11269286.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/kdngvg317/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">è—å­—çŸ³ è•´å¤©æœº</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/24/n11543039.md#1" target="_blank">é¢œæ™ºåŽï¼šä¸­å›½ç‰¹å¤§é¥¥è’60å‘¨å¹´ç¥­ï¼ˆä¸€ï¼‰</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/30/n9092520.md#1" target="_blank">æ³•è½®å¤§æ³•æ´ªä¼ æ–°è¥¿å…° 20å¹´ç‚¹æ»´å›žé¡¾</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/17/12/29/n10005600.md#1">ã€è¥¿æ¸¸ä¹‰è¶£ã€‘ä¹‹ä¸€ï¼šç¥žç§˜çš„æ¨µå¤«</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/10/n12745735.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ•™å®—é¢„è¨€ï¼šæœ«æ—¥å®¡åˆ¤å°†è¿‘ï¼Ÿ</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/8/n12741216.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘è¯ºæŸ¥ä¸¹çŽ›æ–¯é¢„è¨€è‹å…±æˆ–ä¸­å…±æ”¿æƒï¼Ÿ</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/5/n12734415.md#1">ä¸­å›½æ–°å¹´ï¼šå›žæº¯è¾›ä¸‘ä¸‰ç™¾å¹´ å±éš¾ä¸­å¯»æ›™å…‰</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/6/n12737563.md#1">ã€è¿œè§å¿«è¯„ã€‘ç¥žç§˜é¢„è¨€4åº¦æƒŠçŽ°æ­£å² é¢„å‘Šéœ¸çŽ‹å‡º</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/12/n12749457.md#1">ã€é‡æ’­ã€‘å¼¹åŠ¾å®¡è®¯ç¬¬4å¤© å·æ™®å¾‹å¸ˆå›¢é˜ŸæŠ—è¾©</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/12/n12749965.md#1">ã€è´¢å•†å¤©ä¸‹ã€‘æ–‡è´¢ç¥žæ­¦è´¢ç¥ž è°æ˜¯æ­£è´¢ç¥žï¼Ÿ</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/9/n12743509.md#1">ã€å¤§è¯è¥¿æ²¹ã€‘ä¸€ä»£å®—å¸ˆï¼ˆä¸‹ï¼‰ï¼šæ°¸æ’çš„æ‹¿ç ´ä»‘</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/10/n12745615.md#1">èµµä¸½é¢–æ–°å‰§æ€é’ç…§æ›å…‰ ç˜¦çš„ä»¤äººéœ‡æƒŠ</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/11/n12747190.md#1">ã€æ–°é—»å¤§å®¶è°ˆã€‘æ‹œä¹ é€šè¯è°è®©æ­¥ï¼Ÿä¸–å«çªæ”¹å£</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/11/n12746106.md#1">æ‹œç™»å’Œä¹ è¿‘å¹³é¦–æ¬¡é€šè¯ è°ˆäº†ä»€ä¹ˆ</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/10/n12745615.md#1">èµµä¸½é¢–æ–°å‰§æ€é’ç…§æ›å…‰ ç˜¦çš„ä»¤äººéœ‡æƒŠ</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/11/n12747753.md#1">æž—é’éœžä»¨å¥³æ–°å¹´æ”¶ç‰¹å¤§çº¢åŒ… é‡‘é¢æ›å…‰æƒŠå‘†ç½‘å‹</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/10/n12745090.md#1">31ç»„è‰ºäººæŽ¥åŠ›è¡¨æ¼” å°æ¹¾ã€Šçº¢ç™½ã€‹é™ªè§‚ä¼—å›´ç‚‰</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/10/n12745837.md#1">61å²é’Ÿæ¥šçº¢æ™’ç…§åº†ç”Ÿ ç½‘å‹å¤§èµžå†»é¾„å¤–è¡¨</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/11/n12747378.md#1">å­™ä¿ªæ™’æ‰‹å†™æ˜¥è”è¿Žæ–°å¹´ ç½‘å‹å–Šè¯é‚“è¶…è·Ÿç€å­¦</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/11/n12747555.md#1">é£žæ°´å¾ˆå¤šäººåšé”™äº† 5æ‹›ç»™è‚‰ç±»åŽ»è…¥å‘³</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/11/n12746195.md#1">ã€é‡æ’­ã€‘2021å¹´ä¸æƒ³çŠ¯å¤ªå² å‡ ä»¶äº‹åƒä¸‡åˆ«åš</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/11/n12747322.md#1">è®©å¤´å‘å˜é»‘å°±å–è¿™ç¢— 4ç§é¸¡æ±¤è¡¥æ°”åˆè¡¥è¡€</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/10/n12744890.md#1">æœ‰åƒè”¬æžœè¿˜ä¸å¤Ÿ 10æ‹›è½»æ¾è¡¥è¶³è†³é£Ÿçº¤ç»´</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/9/n12743330.md#1">ã€ç½—åŽ¨å¯»å‘³ä¹‹å¹´èœç³»åˆ—ã€‘ç¿¡ç¿ æ¯”ç›®é±¼</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/kdngvg317/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/kdngvg317/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/5/20/n11269286.htm">å››å·å†çŽ°éžæ´²çŒªç˜Ÿ ç”ŸçŒªæ­»äº¡78å¤´</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kdngvg317/djy/blob/master/gb/19/5/20/n11269286.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/kdngvg317/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/kdngvg317/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/kdngvg317/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
